// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleBitbucketWebhook Should create channel, set topic and invite author and reviewers on PR opened 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [
    {
      "is_private": true,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channel": "12345",
      "force": true,
      "users": "test.author@test.com,test.reviewer1@test.com",
    },
  ],
  "kicksFromChannels": [],
  "lookedUpUsers": [
    {
      "email": "test.author@test.com",
    },
    {
      "email": "test.reviewer1@test.com",
    },
  ],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#0288D1",
          "text": "Quite a long and comprehensive description to get channel title longer than 250 symbols which is a maximum length for the Slack",
        },
        {
          "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
        },
      ],
      "channel": "12345",
      "icon_emoji": ":bitbucket:",
      "text": "The pull request was opened by Test Author.",
    },
  ],
  "setChannelTopics": [
    {
      "channel": "12345",
      "topic": ":git: Pull request: Quite a long and comprehensive title to get channel title longer than 250 symbols which is a maximum length for the Slack | :git-branch: To branch: \`TEST-PROJ/test-repository:master\`",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR declining 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "text": ":no_entry_sign: The pull request was declined by Test Author.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR deletion 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "text": ":no_entry_sign: The pull request was deleted by Test Author.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR merge 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "text": ":white_check_mark: The pull request was merged by Test Author. Well done, thank you all.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR approval/unapproval/needs work 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Reviewer 1 requested changes for <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": ":large_yellow_circle: Unapproved: Test Reviewer 1",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "text": "Test Reviewer 1 requested changes for <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
    },
    {
      "blocks": [
        {
          "text": {
            "text": "Test Reviewer 1 unapproved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": ":large_yellow_circle: Unapproved: Test Reviewer 1",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "text": "Test Reviewer 1 unapproved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
    },
    {
      "blocks": [
        {
          "text": {
            "text": "Test Reviewer 1 approved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": ":large_yellow_circle: Unapproved: Test Reviewer 1",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "text": "Test Reviewer 1 approved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR comment 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "metadata": {
        "event_payload": {
          "comment_id": "1",
          "severity": "NORMAL",
          "thread_resolved": false,
        },
        "event_type": "bitbucket_comment_snapshot_saved",
      },
      "text": "Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR comment deletion 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Reviewer 1 deleted comment:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "metadata": {
        "event_payload": {
          "comment_id": "1",
          "severity": "NORMAL",
          "thread_resolved": false,
        },
        "event_type": "bitbucket_comment_snapshot_saved",
      },
      "text": "Test Reviewer 1 deleted comment:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR comment modification 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|edited comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Updated comment text",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "metadata": {
        "event_payload": {
          "comment_id": "1",
          "severity": "NORMAL",
          "thread_resolved": false,
        },
        "event_type": "bitbucket_comment_snapshot_saved",
      },
      "text": "Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|edited comment>:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR commit 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "A <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/commits/from-ref-commit-hash|new commit> was added to the pull request by Test Author.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment for TEST-PROJ, test-repository, from-ref-commit-hash",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "text": "A <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/commits/from-ref-commit-hash|new commit> was added to the pull request by Test Author.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR modification 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": ":writing_hand: Test Author changed the pull request",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Target is changed to \`not-the-master\`",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Title is changed to: New pull request title",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Description is changed to:

New pull request description",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
      "text": ":writing_hand: Test Author changed the pull request",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should update channel participants on reviewers list update 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [
    {
      "channel": "12345",
      "force": true,
      "users": "test.reviewer2@test.com",
    },
  ],
  "kicksFromChannels": [
    {
      "channel": "12345",
      "user": "test.reviewer1@test.com",
    },
  ],
  "lookedUpUsers": [
    {
      "email": "test.reviewer2@test.com",
    },
    {
      "email": "test.reviewer1@test.com",
    },
  ],
  "sentMessages": [],
  "setChannelTopics": [],
}
`;
